# takuzuHaskell

./: README.md  stack.yaml  takuzu-haskell.cabal
src/: Main.hs  Takuzu.hs
tests/: Tests.hs
