name:                takuzu-haskell
version:             0.1.0.0
synopsis:            takuzu resolver "a la Bird" attempt
description:         Please see README.md
homepage:            https://github.com/atrolla/takuzu-haskell#readme
license:             BSD3
license-file:        LICENSE
author:              Yvan VU
maintainer:          yvan.vu@arolla.fr
copyright:           2016 atrolla
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  ghc-options:         -Wall
  hs-source-dirs:      src
  exposed-modules:     Takuzu
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && <5

executable takuzu-haskell
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       takuzu-haskell,
                       timeit

test-suite tests
  type:                exitcode-stdio-1.0
--  ghc-options:         -Wall
  hs-source-dirs:      tests
  main-is:             Tests.hs
  default-language:    Haskell2010
  build-depends:       base,
                       takuzu-haskell,
                       hspec,
                       QuickCheck
